--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "compile": "rm -r ./dist ; cd ./lambdas && GOARCH=arm64 GOOS=linux go build -tags lambda.norpc -o ../dist/bootstrap main.go",
+    "destroy": "cdk destroy --force",
+    "deploy": "npm run compile && cdk deploy ---require-approval never"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.9",
+    "aws-cdk": "2.96.2",
+    "dotenv": "^16.3.1",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.96.2",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
