--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "cdk": "cdk",
     "compile": "rm -r ./dist ; cd ./lambdas && GOARCH=arm64 GOOS=linux go build -tags lambda.norpc -o ../dist/bootstrap main.go",
     "destroy": "cdk destroy --force",
-    "deploy": "npm run compile && cdk deploy ---require-approval never"
+    "deploy": "pnpm compile && cdk deploy ---require-approval never"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.5.9",
     "aws-cdk": "2.96.2",
-    "dotenv": "^16.3.1",
-    "jest": "^29.6.4",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.2.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.96.2",
-    "constructs": "^10.0.0",
+    "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
 }
